Adding authentication and user parameters, once admin created, dont really need other users for our single use case
