# niftyNotaryAPI/users/routes.config.js
@@ -1,14 +1,17 @@
 const UsersController = require('./controllers/users.controller');
 const PermissionMiddleware = require('../common/middlewares/auth.permission.middleware');
 const ValidationMiddleware = require('../common/middlewares/auth.validation.middleware');
+//@todo move this in to common because is shared with user
+const VerifyUserMiddleware = require('../authorization/middlewares/verify.user.middleware')
 const config = require('../common/config/env.config');
-
+// @todo should prevent falling over on things like trailing commas on request json
 const ADMIN = config.permissionLevels.ADMIN;
 const PAID = config.permissionLevels.PAID_USER;
 const FREE = config.permissionLevels.NORMAL_USER;
-
+// should this be user or users ... i feel it should be user
 exports.routesConfig = function (app) {
     app.post('/users', [
+        VerifyUserMiddleware.hasAuthValidFields, // ensure user and password set
         UsersController.insert
     ]);
     app.get('/users', [
@@ -24,7 +27,7 @@ exports.routesConfig = function (app) {
     ]);
     app.patch('/users/:userId', [
         ValidationMiddleware.validJWTNeeded,
-        PermissionMiddleware.minimumPermissionLevelRequired(FREE),
+        PermissionMiddleware.minimumPermissionLevelRequired(ADMIN), // @todo allow free and above to
         PermissionMiddleware.onlySameUserOrAdminCanDoThisAction,
         UsersController.patchById
     ]);
